--- a/index.html
+++ b/index.html
@@ -32,30 +32,33 @@
     <div id="page2" class="page2">
         <div class="pg2-cont">
             <h1>Oyee...</h1>
-        <p>       em chestunnav nenu em cheppali anukuntuna ani alochistunnava? chalane cheppali ani undi kani
-            vishwamantha premani oka mata lo chupinchagalana... okavela chupinchina tarvata nv kadhante barinchagalana..?
+        <p>           Em chestunnav nenu em cheppali anukuntuna ani alochistunnava? chalane cheppali ani undi kani
+            vishwamantha premani okka mata lo chupinchagalana... okavela chupinchina tarvata nv kadhante barinchagalana..?
             ni meda premani varninchali ante na manasu lo matalu saripovatledu kani okkati matram chepta nv eduru paddithe 
             vache feeling undi chusava adi nenu entha sampadisthe vastundi nv leni ara kshanam kuda yugam la anipistundi 
             na manasulo ni meda unna premaki emaina viluva kattataniki undi ante adi malli na manase avutundi nv premistunna
             ani okka mata cheppale kani prathikshanam samudram antha premani tesukuvachi ni paina kuripinchali ani undi eppudu vachi 
             poye alalu laga premani kothaga parichayam cheyalani undi intha premani na manasulo dachukovali ante chala baruvu ga
-            undi okka mata cheppi konchem natho kalisi aa feeling ni panchukuntava....Ni dhooram na oopiri aapestundi ante nammutava.
-            prema puttadaniki 
-            okka kshanam chalu anta kadha aa kshanam kosam entha kalam aina asha ga eduruchusta.
-            mana thala rathanu rayataniki aa brahmadevudiki entha time pattindo naku telidu kani  
-            netho kalisi gadapali anukune kshanalu varninchataniki na jeevitham saripovatledu...netho ila matlade roju vastundi ani
-            kalalo kuda anukoledu kani chepakapothe kalalugane migilipotai emo ane bhayam tho cheptunna. anthaki naku nipaina prema entha 
-            ani telusukovali ani unte manaam eduru padda kshanam na kallaloki chudu telustundi aa kshanam gurthupettuko ni dhooram viluva na
-             kaalla venuka unna kanneru chebuthundi ninnu kalisinappudu vachina anandam entha ante na kanula chivarana aagipoyina anandapashpalu chebutai
-            enduku intha premistunna enduku intha ishtam ani adigithe na daggara samadhanam ledu vethakali ani kuda anukovatledu karanam leni premaku
-             minchi viluvainadhi emundi...anduke ila prathikshanam netho kalisi gadipithe adhe naku lakshakotlu. intha prema undi kabatte antha badha undi....</p>
-        <p>Idi antha chadivina taruvata nekem anipistundo naku teidu kani nv choodagaligithe rasina prathi aksharam venuka 
-            anthulenantha prema kanipistundi... </p>
-        <p>chivariga okkati,ee kshanam nv oppukunte kalsi prayanam cheddam na vanthu nenu mata isthunna jeevitham lo neku entha sampadinchi pedatano 
-            naku telidu kani ninnu kashatapettakunda chusukuvadaniki anukshanam nenu kashtapadatanu...gadiche kalam enni kashtalu techina netho kalsi
-        panchukovataniki nenu siddam ga unna...muginchali ante badhagane undi kani malli kalavali ante muginchaliga,anduke ippatiki ila mugistunna Take Care.</p>
-        <p>intha cheppina neku ee mata cheppakapothe ela...,</p>
-        <p>I Love You❤</p>
+            undi okka mata cheppi konchem natho kalisi aa feeling ni panchukuntava....</p>
+            
+            <p>          Ni dhooram na oopiri aapestundi ante nammutava.prema puttadaniki okka kshanam chalu anta kadha aa kshanam ippudaina eppudaina ni kosam entha 
+                kalam aina na kallu anthe prema eduruchustai. mana thala rathanu rayataniki aa brahmadevudiki entha time pattindo naku telidu kani  
+                netho kalisi gadapali anukune kshanalu varninchataniki na jeevitham saripovatledu...</p>
+                <p>          Netho ila matlade roju vastundi ani
+                    kalalo kuda anukoledu kani chepakapothe kalalugane migilipotai emo ane bhayam tho cheptunna. anthaki naku nipaina prema entha 
+                    ani telusukovali ani unte manaam eduru padda kshanam na kallaloki chudu telustundi aa kshanam gurthupettuko ni dhooram viluva na
+                     kaalla venuka unna kanneru chebuthundi ninnu kalisinappudu vachina anandam entha ante na kanula chivarana aagipoyina anandapashpalu chebutai
+                    enduku intha premistunna enduku intha ishtam ani adigithe na daggara samadhanam ledu vethakali ani kuda anukovatledu karanam leni premaku
+                     minchi viluvainadhi emundi... </p>
+            
+                     <p>          Anduke ila prathikshanam netho kalisi gadipithe adhe naku lakshakotlu. intha prema undi kabatte antha badha undi....</p>
+                     <p>          Idi antha chadivina taruvata nekem anipistundo naku teidu kani nv choodagaligithe rasina prathi aksharam venuka 
+                         anthulenantha prema kanipistundi...</p>
+                <p>          Chivariga okkati,ee kshanam nv oppukunte kalsi prayanam cheddam na vanthu nenu mata isthunna jeevitham lo neku entha sampadinchi pedatano 
+                    naku telidu kani ninnu kashatapettakunda chusukuvadaniki anukshanam nenu kashtapadatanu...gadiche kalam enni kashtalu techina netho kalsi
+                panchukovataniki nenu siddam ga unna...muginchali ante badhagane undi kani malli kalavali ante muginchaliga,anduke ippatiki ila mugistunna Take Care.</p>
+            <p>          Intha cheppina neku ee mata cheppakapothe ela...,</p>
+        <p>          I Love You❤</p>
         </div>
         <div class="pg2-final">
             <h1>I Miss You Raa</h1>
