--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     ika na gurinchi alochinchadam modalupettu,Netho ee prayanam theeram teliyani sandramla anipistundi aina
                      parledu gamyam edaina nv vese prathi adugulonu neku thoduga unta...Nijanga ee kshanam na premaku pranam 
                     posinattu anipistundi once again i miss you (it's more than i love you).....</p>
-                    
+                    <img src="./Images/sticker.png">
             </div>
     </div>
 
