--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
             poye alalu laga premani kothaga parichayam cheyalani undi intha premani na manasulo dachukovali ante chala baruvu ga
             undi okka mata cheppi konchem natho kalisi aa feeling ni panchukuntava....</p>
             <p>Ni dhooram na oopiri aapestundi ante nammutava.prema puttadaniki okka kshanam chalu anta kadha aa kshanam ippudaina eppudaina ni kosam entha 
-                kalam aina na kallu anthe prema eduruchustai. mana thala rathanu rayataniki aa brahmadevudiki entha time pattindo naku telidu kani  
+                kalam aina na kallu anthe premaga eduruchustai. mana thala rathanu rayataniki aa brahmadevudiki entha time pattindo naku telidu kani  
                 netho kalisi gadapali anukune kshanalu varninchataniki na jeevitham saripovatledu...</p>
                 <p>netho ila matlade roju vastundi ani
                     kalalo kuda anukoledu kani chepakapothe kalalugane migilipotai emo ane bhayam tho cheptunna. anthaki naku nipaina prema entha 
-                    ani telusukovali ani unte manaam eduru padda kshanam na kallaloki chudu telustundi aa kshanam gurthupettuko ni dhooram viluva na
-                     kaalla venuka unna kanneru chebuthundi ninnu kalisinappudu vachina anandam entha ante na kanula chivarana aagipoyina anandapashpalu chebutai
+                    ani telusukovali ani unte manaam eduru padda kshanam na kallaloki chudu telustundi aa kshanam gurthupettuko ni dhooram viluva entha ante na
+                     kalla venuka unna kanneru chebuthundi ninnu kalisinappudu vachina anandam entha ante na kanula chivarana aagipoyina anandapashpalu chebutai
                     enduku intha premistunna enduku intha ishtam ani adigithe na daggara samadhanam ledu vethakali ani kuda anukovatledu karanam leni premaku
                      minchi viluvainadhi emundi... </p>
                      <p>anduke ila prathikshanam netho kalisi gadipithe adhe naku lakshakotlu. intha prema undi kabatte antha badha undi....</p>
