--- a/index.html
+++ b/index.html
@@ -242,6 +242,15 @@ window.onload = () => {
 };
     
 </script>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-VWSD9KN26H"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-VWSD9KN26H');
+</script>
 
 
 
